recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:9: error: ')' expected but '}' found.
}
^FourSquare:14: error: Unmatched closing brace '}' ignored here
}
^